more readable font and caption fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ p {
     font-family: 'Courier New';
     text-align: justify;
     margin: auto;
-    font-size: 20px;    
+    font-size: 24px;    
     line-height: 2;
     letter-spacing: 1px;
 }
@@ -46,7 +46,7 @@ p {
     max-width: 600px;
 }
 
-.alt {
+.cv {
     max-width: 768px;
     margin: 5px 0;
     border: 1px solid black;
@@ -55,7 +55,7 @@ p {
 .caption {
     font-family: 'Courier New';
     text-align: center;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 hr {
